maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: value =< is not a member of Int
  while (posa =<getY){
              ^